<resources>
    <string name="app_name">ATMAroundMe</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Re-Password</string>
    <string name="signup">Signup</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\\\'t view post! Get closer.</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Logout</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="progress_post">Posting</string>
</resources>
